tests/parsing/fail/sum_num_and_str.circom
template T() {
    var a = 2 + "1";
    var a = "2";
}

component main = T();
